index file linked to donate/adopt

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	</head>
 	<body>
-	<span class="logo"><img src="img/logo_100x95.png"></span>
+	<span class="logo"><a href="index.html"><img src="img/logo_100x95.png"></a></span>
 	<nav>
 		
 		<ul>
@@ -32,8 +32,8 @@
 			<li style="padding-left:20px;padding-right:29px;">VOLUNTEER</li>
 			<li style="padding-right:13px;">STORIES</li>
 			<li>EVENTS</li>
-			<li class="donate">DONATE</li>
-			<li class="adopt">ADOPT</li>
+			<li class="donate"><a href="donate.html">DONATE</a></li>
+			<li class="adopt"><a href="Adopt/adopt.html">ADOPT</a></li>
 			
 		</ul>
 	</nav>
