--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<li style="padding-left:20px;padding-right:29px;">VOLUNTEER</li>
 			<li style="padding-right:13px;">STORIES</li>
 			<li>EVENTS</li>
-			<li class="donate">DONATE</li>
-			<li class="adopt">ADOPT</li>
+			<li class="donate"><a href="donate.html">DONATE</a></li>
+			<li class="adopt"><a href="Adopt/adopt.html">ADOPT</a></li>
 			
 		</ul>
 	</nav>
