--- a/donate.html
+++ b/donate.html
@@ -29,7 +29,7 @@
 
 		
 			
-			<span class="overlay"><img src="img/donate_backgroundimage.jpg" style="width:1450px; background-attachment: fixed; margin: 0; border-top: 0;"/></span>
+			<span class="overlay"><img src="img/donate_backgroundimage.jpg" style="width:100%; background-attachment: fixed; margin: 0; border-top: 0;"/></span>
 
 		
 
