--- a/Adopt/adopt.html
+++ b/Adopt/adopt.html
@@ -29,7 +29,7 @@
 
        <div id="wrapper">
 
-  	       <span class="overlay"><img src="img/adopt_backgroundimage.png" style="width:1450px; background-attachment: fixed; margin: 0; border-top: 0;"/></span>
+  	       <span class="overlay"><img src="img/adopt_backgroundimage.png" style="width:100%; background-attachment: fixed; margin: 0; border-top: 0;"/></span>
   	 
                 <div class="whitebox"></div>
   		          <div class="pinkbox"></div>
