--- a/Adopt/adopt.html
+++ b/Adopt/adopt.html
@@ -12,7 +12,7 @@
   </head>
   
   <body>
-      <span class="logo"><img src="img/logo_100x95.png"></span>
+      <span class="logo"><a href="index.html"><img src="img/logo_100x95.png"></a></span>
       <nav>
     
           <ul>
