--- a/donate.html
+++ b/donate.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<span class="logo"><img src="img/logo_navbar.png"></span>
+		<span class="logo"><a href="index.html"><img src="img/logo_100x95.png"></a></span>
 		<nav>
 		
 			<ul>
